Fix header links color. They now display as white for dark mode

--- a/client/src/layouts/Central/HeaderLinks/HeaderLinks.style.scss
+++ b/client/src/layouts/Central/HeaderLinks/HeaderLinks.style.scss
@@ -24,4 +24,11 @@
   a:active {
     color: $theme--dark;
   }
+
+  a {
+  @media(prefers-color-scheme: dark) {
+    background: black;
+    color: white;
+  }
+}
 }
