--- a/client/src/pages/Menu/Menu.style.scss
+++ b/client/src/pages/Menu/Menu.style.scss
@@ -1,8 +1,7 @@
 @media (prefers-color-scheme: dark) {
     .menu-theme {
         background: black;
-        color: #dcb;
-        outline: 5px dashed #000;
+        color: white;
     }
 }
 
